--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <!-- Logo and Brand -->
     <a class="navbar-brand" href="/">
-      <img src="/images/trnsc_logo2.png" alt="TRNSC" width="40" height="40" class="d-inline-block align-text-top" />
+      <img src="public/images/trnsc_logo2.png" alt="TRNSC" width="40" height="40" class="d-inline-block align-text-top" />
       The Real Naked Swedish Chef
     </a>
 
@@ -38,26 +38,26 @@
       <!-- Social Media Icons -->
       <div class="social-icons ms-auto">
         <a href="https://facebook.com" class="social-icon mx-2">
-          <img src="/images/icons/facebook.svg" alt="Facebook" width="24" height="24" />
+          <img src="public/images/icons/facebook.svg" alt="Facebook" width="24" height="24" />
         </a>
         <a href="https://instagram.com" class="social-icon mx-2">
-          <img src="/images/icons/instagram.svg" alt="Instagram" width="24" height="24" />
+          <img src="public/images/icons/instagram.svg" alt="Instagram" width="24" height="24" />
         </a>
         <a href="https://twitter.com" class="social-icon mx-2">
-          <img src="/images/icons/x.svg" alt="Twitter (X)" width="24" height="24" />
+          <img src="public/images/icons/x.svg" alt="Twitter (X)" width="24" height="24" />
         </a>
         <a href="mailto:trnsc.health@gmail.com" class="social-icon mx-2">
-          <img src="/images/icons/email.svg" alt="Email" width="24" height="24" />
+          <img src="public/images/icons/email.svg" alt="Email" width="24" height="24" />
         </a>
       </div>
 
       <!-- Donation Buttons -->
       <div class="donation-buttons ms-auto">
         <a href="https://www.paypal.com/donate" class="btn btn-outline-secondary btn-sm mx-2">Donate via PayPal
-          <img src="/images/icons/paypal.svg" alt="Donate via PayPal" width="24" height="24" />
+          <img src="public/images/icons/paypal.svg" alt="Donate via PayPal" width="48" height="48" />
         </a>
         <a href="https://wise.com" class="btn btn-outline-secondary btn-sm mx-2">Donate via Wise
-          <img src="/images/icons/wise.png" alt="Donate via Wise" width="24" height="24" />
+          <img src="public/images/icons/wise.png" alt="Donate via Wise" width="48" height="48" />
         </a>
       </div>
     </div>
