--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -14,16 +14,16 @@
         <h6 class="text-uppercase mb-4">Follow Us</h6>
         <div class="d-flex justify-content-center">
           <a href="https://facebook.com" class="social-icon mx-2">
-            <img src="public/images/icons/facebook.svg" alt="Facebook" width="24" height="24" />
+            <img src="../public/images/icons/facebook.svg" alt="Facebook" width="24" height="24" />
           </a>
           <a href="https://instagram.com" class="social-icon mx-2">
-            <img src="public/images/icons/instagram.svg" alt="Instagram" width="24" height="24" />
+            <img src="../public/images/icons/instagram.svg" alt="Instagram" width="24" height="24" />
           </a>
           <a href="https://twitter.com" class="social-icon mx-2">
-            <img src="public/images/icons/x.svg" alt="Twitter (X)" width="24" height="24" />
+            <img src="../public/images/icons/x.svg" alt="Twitter (X)" width="24" height="24" />
           </a>
           <a href="mailto:trnsc.health@gmail.com" class="social-icon mx-2">
-            <img src="public/images/icons/email.svg" alt="Email" width="24" height="24" />
+            <img src="../public/images/icons/email.svg" alt="Email" width="24" height="24" />
           </a>
         </div>
       </div>
@@ -32,10 +32,10 @@
       <div class="col-md-4 text-md-right">
         <h6 class="text-uppercase mb-4">Support Us</h6>
         <a href="https://www.paypal.com/donate" class="btn btn-outline-secondary btn-sm social-icon mx-2">Donate via PayPal
-        <img src="public/images/icons/paypal.svg" alt="Donate via PayPay" width="48" height="48" />
+        <img src="../public/images/icons/paypal.svg" alt="Donate via PayPay" width="48" height="48" />
         </a>
         <a href="https://wise.com" class="btn btn-outline-secondary btn-sm social-icon mx-2">Donate via Wise
-        <img src="public/images/icons/wise.png" alt="Donate via Wise" width="48" height="48" />
+        <img src="../public/images/icons/wise.png" alt="Donate via Wise" width="48" height="48" />
         </a></a>
       </div>
     </div>
