updated images and links

--- a/views/about.html
+++ b/views/about.html
@@ -139,12 +139,12 @@
                         recipes are
                         designed to help you keep things simple but effective.
                     </p>
+                    
+                        <img src="../public/images/blood_sugar_average.jpg" alt="Blood sugar average table" class="img-fluid rounded shadow my-2">
+                    
                 </div>
                
-                <div class="d-flex align-items-start justify-content-center blood-sugar-section">
-                    <img src="/public/images/blood_sugar_average.jpg" alt="Blood Sugar Averages"
-                        class="img-fluid rounded shadow" />
-                </div>
+                
 
                 
             </div>
