Fixed Popper and header / footer

--- a/views/about.html
+++ b/views/about.html
@@ -156,7 +156,7 @@
     <div id="footer-placeholder"></div>
 
     <!-- Bootstrap JS and Popper.js -->
-    <script src="../public/scripts/popper.js"></script>
+    <script src="../node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
     <script src="../public/scripts/bootstrap.min.js"></script>
 
     <!-- Your custom scripts -->
