--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -29,12 +29,12 @@
       </div>
 
       <!-- Donations -->
-      <div class="col-md-4 text-md-right">
+      <div class="col-md-4 text-md-right donation-buttons">
         <h6 class="text-uppercase mb-4">Support Us</h6>
-        <a href="https://www.paypal.com/donate" class="btn btn-outline-secondary btn-sm social-icon mx-2">Donate via PayPal
+        <a href="https://www.paypal.com/donate" class="btn btn-outline-secondary btn-sm social-icon mx-2 mb-1">Donate via
         <img src="../public/images/icons/paypal.svg" alt="Donate via PayPay" width="48" height="48" />
         </a>
-        <a href="https://wise.com" class="btn btn-outline-secondary btn-sm social-icon mx-2">Donate via Wise
+        <a href="https://wise.com" class="btn btn-outline-secondary btn-sm social-icon mx-2">Donate via
         <img src="../public/images/icons/wise.png" alt="Donate via Wise" width="48" height="48" />
         </a></a>
       </div>
