--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -57,11 +57,42 @@ main {
 .donation-buttons a {
     display: inline-flex;
     align-items: center;
+    justify-content: space-between;
     margin: 0 10px;
+    width: 50%;
+    max-width: 300px;
+    padding: 10px 20px;
+    border: 1px solid rgba(45, 45, 45, 0.85);
+    box-sizing: border-box;
+    border-radius: 8px;
+    background-color: #f4a261;
+    color: rgba(45, 45, 45, 0.85);
+    font-weight: 600;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.donation-buttons a:hover {
+    background-color: #6ba89e;
+    color: white;
+    transform: scale(1.05);
 }
 
 .donation-buttons img {
-    margin-left: 8px;
+    margin-left: auto;
+    /* Align the logo to the right inside the button */
+    filter: grayscale(100%);
+    transition: filter 0.3s ease;
+}
+
+.donation-buttons a:hover img {
+    filter: grayscale(0);
+    /* Bring back the full color icon on hover */
+}
+
+
+.donation-buttons img {
+    margin-left: auto;
+    /* Align the logo to the right inside the button */
 }
 
 .search-width {
@@ -69,6 +100,7 @@ main {
 }
 
 /* END NAVBAR */
+
 
 /* FOOTER */
 /* Footer Styles */
@@ -181,7 +213,15 @@ p {
 /* Make the search bar and social icons responsive */
 @media (max-width: 768px) {
 
-    .social-icons,
+    .social-icons {
+        flex-direction: row !important;
+        /* Ensure icons stay in a row */
+        text-align: center;
+        justify-content: center;
+        /* Center align the icons */
+        margin-top: 10px;
+    }
+
     .donation-buttons {
         flex-direction: column;
         text-align: center;
