--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -53,10 +53,10 @@
 
       <!-- Donation Buttons -->
       <div class="donation-buttons ms-auto">
-        <a href="https://www.paypal.com/donate" class="btn btn-outline-secondary btn-sm mx-2">Donate via PayPal
+        <a href="https://www.paypal.com/donate" class="btn btn-outline-secondary btn-sm mx-2 mb-1">Donate via
           <img src="../public/images/icons/paypal.svg" alt="Donate via PayPal" width="48" height="48" />
         </a>
-        <a href="https://wise.com" class="btn btn-outline-secondary btn-sm mx-2">Donate via Wise
+        <a href="https://wise.com" class="btn btn-outline-secondary btn-sm mx-2">Donate via
           <img src="../public/images/icons/wise.png" alt="Donate via Wise" width="48" height="48" />
         </a>
       </div>
