--- a/views/layouts/recipes/snacks/index_snacks.html
+++ b/views/layouts/recipes/snacks/index_snacks.html
@@ -24,7 +24,8 @@
     <link rel="manifest" href="/public/site.webmanifest">
 
     <!-- Bootstrap CSS -->
-    <link href="/public/styles/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="/public/styles/recipes/index_styles.css" rel="stylesheet">
 
     <!-- Your custom styles -->
@@ -126,8 +127,9 @@
     <div id="footer-placeholder"></div>
 
     <!-- Bootstrap JS and Popper.js -->
-    <script src="/node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
-    <script src="/public/scripts/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
     <!-- Your custom scripts -->
     <script src="/public/scripts/main.js"></script>
