Placeholder text for science and healthy tips

--- a/views/science.html
+++ b/views/science.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Healthy Tips : The Real Naked Swedish Chef</title>
+    <title>Science : The Real Naked Swedish Chef</title>
 
     <!-- Meta tags for social media (Open Graph & Twitter Cards) -->
     <meta property="og:title" content="The Real Naked Swedish Chef" />
@@ -49,6 +49,7 @@
     <!-- Include header -->
     <div id="header-placeholder"></div>
 
+    <!-- Main content -->
     <!-- Main content -->
     <main class="container py-4">
         <!-- Main Content in Two Columns -->
@@ -115,7 +116,7 @@
                 <!-- Image of the Chef -->
                 <div class="row d-flex align-items-start justify-content-center mb-1">
                     <div class="col-md-12 d-flex align-items-start justify-content-center">
-                        <img src="/public/images/trnsc3_image.jpeg" alt="The Real Naked Swedish Chef"
+                        <img src="/public/images/trnsc6_image.jpeg" alt="The Real Naked Swedish Chef"
                             class="img-fluid rounded shadow" />
                     </div>
                 </div>
