--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -43,13 +43,13 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/healthy-tips">Healthy Tips</a>
+          <a class="nav-link" href="/views/healthy_tips.html">Healthy Tips</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/views/about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/the-science">The Science</a>
+          <a class="nav-link" href="/views/science.html">The Science</a>
         </li>
       </ul>
 
