Added more sort options fixed figures on about

--- a/views/about.html
+++ b/views/about.html
@@ -73,7 +73,7 @@
                         to near normal levels.
                     </p>
                     <p>Here's the latest progress—this graph shows my long-term HbA1c improvement:</p>
-                    <figure class="text-center">
+                    <figure class="figure">
                         <img src="/public/images/HbA1c.jpg" alt="HbA1c Graph" class="img-fluid rounded shadow my-3">
                         <figcaption class="figure-caption">
                             <small>
@@ -127,7 +127,7 @@
                                 class="img-fluid rounded shadow my-2">
                             <figcaption class="figure-caption">
                                 <small><strong>Figure 2: Blood Sugar Readings</strong> -
-                                <em>This figure shows the blood sugar readings taken two hours after meals, recorded over a two-month period
+                                <em>Figure 2 shows the blood sugar readings taken two hours after meals, recorded over a two-month period
                                     using recipes from this site.</em></small>
                             </figcaption>
                         </figure>
