--- a/views/layouts/recipes/snacks/index_snacks.html
+++ b/views/layouts/recipes/snacks/index_snacks.html
@@ -67,6 +67,10 @@
                 <option value="fibre-highest">Highest Fibre</option>
                 <option value="protein-highest">Highest Protein</option>
                 <option value="time-shortest">Shortest Cooking Time</option>
+                <option value="calories-lowest">Lowest Calories</option>
+                <option value="calories-highest">Highest Calories</option>
+                <option value="fat-lowest">Lowest Fat</option>
+                <option value="fat-highest">Highest Fat</option>
             </select>
         </div>
     
@@ -76,7 +80,7 @@
             <div class="col-md-4">
                 <a href="/views/layouts/recipes/snacks/beetroot_chips.html" class="card-link">
                     <div class="card mb-4 shadow-sm" data-name="Beetroot Chips" data-date="2024-10-01" data-carbs="15"
-                        data-fibre="5" data-protein="2" data-time="30">
+                        data-fibre="5" data-protein="2" data-time="30" data-calories="100" data-fat="1">
                         <img src="/public/images/recipes/beetroot_chips/beetroot_chips.jpg" class="card-img-top"
                             alt="Beetroot Chips">
                         <div class="card-body">
@@ -93,7 +97,7 @@
             <div class="col-md-4">
                 <a href="/views/layouts/recipes/snacks/chocolate_raw.html" class="card-link">
                     <div class="card mb-4 shadow-sm" data-name="Chocolate (absolutely sugar free)" data-date="2024-09-20"
-                        data-carbs="2" data-fibre="8" data-protein="4" data-time="10">
+                        data-carbs="2" data-fibre="8" data-protein="4" data-time="10" data-calories="200" data-fat="20">
                         <img src="/public/images/recipes/chocolate/chocolate_1.jpg" class="card-img-top"
                             alt="Chocolate (Sugar Free)">
                         <div class="card-body">
@@ -110,7 +114,7 @@
             <div class="col-md-4">
                 <a href="/views/layouts/recipes/snacks/parsnip_chips.html" class="card-link">
                     <div class="card mb-4 shadow-sm" data-name="Parsnip Chips" data-date="2024-09-28" data-carbs="18"
-                        data-fibre="6" data-protein="3" data-time="25">
+                        data-fibre="6" data-protein="3" data-time="25" data-calories="150" data-fat="5">
                         <img src="/public/images/recipes/parsnip_chips/parsnip_chips.jpg" class="card-img-top"
                             alt="Parsnip Chips">
                         <div class="card-body">
