--- a/views/layouts/recipes/snacks/index_snacks.html
+++ b/views/layouts/recipes/snacks/index_snacks.html
@@ -71,62 +71,13 @@
                 <option value="calories-highest">Highest Calories</option>
                 <option value="fat-lowest">Lowest Fat</option>
                 <option value="fat-highest">Highest Fat</option>
+                <option value="random">Randomize</option>
             </select>
         </div>
     
         <!-- Recipe Cards -->
-        <div id="recipe-list" class="row">
-            <!-- Beetroot Chips Card -->
-            <div class="col-md-4">
-                <a href="/views/layouts/recipes/snacks/beetroot_chips.html" class="card-link">
-                    <div class="card mb-4 shadow-sm" data-name="Beetroot Chips" data-date="2024-10-01" data-carbs="15"
-                        data-fibre="5" data-protein="2" data-time="30" data-calories="100" data-fat="1">
-                        <img src="/public/images/recipes/beetroot_chips/beetroot_chips.jpg" class="card-img-top"
-                            alt="Beetroot Chips">
-                        <div class="card-body">
-                            <h5 class="card-title">Beetroot Chips</h5>
-                            <p class="card-text">A crispy and healthy alternative to regular chips, perfect as a snack or side
-                                dish.</p>
-                            <p class="card-text"><small class="text-muted">Added on 1st October 2024</small></p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        
-            <!-- Chocolate (Sugar Free) Card -->
-            <div class="col-md-4">
-                <a href="/views/layouts/recipes/snacks/chocolate_raw.html" class="card-link">
-                    <div class="card mb-4 shadow-sm" data-name="Chocolate (absolutely sugar free)" data-date="2024-09-20"
-                        data-carbs="2" data-fibre="8" data-protein="4" data-time="10" data-calories="200" data-fat="20">
-                        <img src="/public/images/recipes/chocolate/chocolate_1.jpg" class="card-img-top"
-                            alt="Chocolate (Sugar Free)">
-                        <div class="card-body">
-                            <h5 class="card-title">Chocolate (Absolutely Sugar Free)</h5>
-                            <p class="card-text">A rich and satisfying treat with zero sugar, ideal for diabetics or anyone
-                                cutting sugar.</p>
-                            <p class="card-text"><small class="text-muted">Added on 20th September 2024</small></p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        
-            <!-- Parsnip Chips Card -->
-            <div class="col-md-4">
-                <a href="/views/layouts/recipes/snacks/parsnip_chips.html" class="card-link">
-                    <div class="card mb-4 shadow-sm" data-name="Parsnip Chips" data-date="2024-09-28" data-carbs="18"
-                        data-fibre="6" data-protein="3" data-time="25" data-calories="150" data-fat="5">
-                        <img src="/public/images/recipes/parsnip_chips/parsnip_chips.jpg" class="card-img-top"
-                            alt="Parsnip Chips">
-                        <div class="card-body">
-                            <h5 class="card-title">Parsnip Chips</h5>
-                            <p class="card-text">A crunchy, tasty, and low-carb snack for those craving something different from
-                                potatoes.</p>
-                            <p class="card-text"><small class="text-muted">Added on 28th September 2024</small></p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>
+        <!-- Recipe Cards will be dynamically inserted here -->
+        <div id="recipe-list" class="row"></div>
     </main>
 
     <!-- Include footer -->
@@ -139,5 +90,7 @@
 
     <!-- Your custom scripts -->
     <script src="/public/scripts/main.js"></script>
+    <script src="/public/scripts/recipes/recipes_objects.js"></script>
+    <script src="/public/scripts/recipes/recipe_injection.js"></script>
 </body>
 </html>
